syntax = "proto3";

option go_package = "github.com/ikramanop/mvcs-client/app/protobuf/messages";

package messages;

message CreateRequest {
  string name = 1;
}

message FindRequest {
  string name = 1;
}

message Project {
  string identifier = 1;
  string name = 2;
}

message ProjectList {
  repeated Project projects = 1;
}

message UploadFilesRequest {
  int32 branchId = 1;
  repeated FileRequest files = 2;
}

message UploadFileRequest {
  int32 branchId = 1;
  FileRequest file = 2;
}

message FileRequest {
  string filePath = 1;
  string hash = 2;
  bytes content = 3;
}

message UploadFilesResponse {
  int32 branchId = 1;
  repeated FileResponse files = 2;
}

message UploadFileResponse {
  int32 branchId = 1;
  FileResponse file = 2;
}

message FileResponse {
  int32 id = 1;
  string filePath = 2;
  repeated FileVersionResponse Versions = 3;
}

message FileVersionResponse {
  int32 id = 1;
  string hash = 2;
}

message GetFileVersionRequest {
  int32 branchId = 1;
  oneof file_oneof {
    int32 id = 2;
    string filePath = 3;
  }
}

message GetBranchesResponse {
  repeated Branch branches = 1;
}

message Branch {
  int32 id = 1;
  string name = 2;
  optional int32 parentBranchId = 3;
}

message CreateBranchRequest {
  string name = 1;
  optional int32 parentBranchId = 2;
}