syntax = "proto3";

option go_package = "github.com/ikramanop/mvcs-client/app/protobuf/project";

package project;
import "google/protobuf/empty.proto";
import "messages/messages.proto";


service Project {
  rpc CreateBranch(messages.CreateBranchRequest) returns(messages.Branch);
  rpc GetAllBranches(google.protobuf.Empty) returns(messages.GetBranchesResponse);
  rpc UploadFile(messages.UploadFileRequest) returns(messages.UploadFileResponse);
  rpc UploadFiles(messages.UploadFilesRequest) returns(messages.UploadFilesResponse);
  rpc GetFileVersions(messages.GetFileVersionRequest) returns(messages.FileResponse);
}